Added Login page

--- a/components/Login/Login.scss
+++ b/components/Login/Login.scss
@@ -85,6 +85,7 @@ body {
     [type='submit'] {
       background-color: #fff;
       color: #111D2D;
+      cursor: pointer;
     }
   }
   .header_container {
