--- a/components/Inventory/TopHeader.scss
+++ b/components/Inventory/TopHeader.scss
@@ -2,5 +2,16 @@
   width: 100%;
   height: 35px;
   /* border: 1px solid; */
-  box-shadow: 1px 2px #F0F3F4;
+  box-shadow: 1px 2px 2px #E4E7E8;
+  .nav_drawer {
+    width: 30%;
+    float: left;
+    .nav_inner_div {
+      padding-left: 20px;
+      padding-top: 8px;
+      span {
+        cursor: pointer;
+      }
+    }
+  }
 }
