Added Left Nav and styles

--- a/components/Inventory/Body.scss
+++ b/components/Inventory/Body.scss
@@ -22,7 +22,8 @@
     padding-top: 5px;
     padding-bottom: 5px;
     padding-right: 20px;
-    margin: 15px;
+    margin-left: 15px;
+    margin-top: 15px;
     color: #717171;
     &:hover,
     &:focus {
@@ -37,7 +38,8 @@
   .blue_btn {
     background-color: #38BBF7;
     float: right;
-    margin-right: 45px;
+    margin-right: 70px;
+    margin-bottom:20px;
     color: white;
     height: 30px;
   }
