--- a/components/Inventory/LeftNav.scss
+++ b/components/Inventory/LeftNav.scss
@@ -3,4 +3,48 @@
   float: left;
   min-height:100%;
   background-color: #1C2B36;
+  .azzu_logo {
+    width:100%;
+    float:left;
+    margin-top:20px;
+    .azzu_logo_text {
+      width: 60%;
+      margin:0 auto;
+      color: #EEEEEF;
+    }
+  }
+  .navigation {
+    width: 100%;
+    float: left;
+    margin-top: 19px;
+    .navigation_text {
+      color: #617889;
+      font-size: 10px;
+      margin-left: 15px;
+    }
+    .navigation_items {
+      width: 100%;
+      float: left;
+      padding-top: 20px;
+      .navigation_item {
+        width: 100%;
+        height: 22px;
+        padding-left: 14px;
+        padding-top: 10px;
+        .fa {
+          /* color: #E3DC05; */
+          color: #FAF200;
+          font-size: 10px;
+        }
+        .nav_item {
+          color: #ACC3D4;
+          font-size: 10px;
+          padding-left: 10px;
+        }
+      }
+      .navigation_item_active {
+        background-color: #17242D;
+      }
+    }
+  }
 }
