--- a/components/Inventory/LeftNav.scss
+++ b/components/Inventory/LeftNav.scss
@@ -28,17 +28,19 @@
       padding-top: 20px;
       .navigation_item {
         width: 100%;
-        height: 22px;
+        height: 35px;
         padding-left: 14px;
         padding-top: 10px;
+        cursor: pointer;
+        margin-bottom: 6px;
         .fa {
           /* color: #E3DC05; */
           color: #FAF200;
-          font-size: 10px;
+          font-size: 12px;
         }
         .nav_item {
           color: #ACC3D4;
-          font-size: 10px;
+          font-size: 12px;
           padding-left: 10px;
         }
       }
